assets/css/style.css
/* @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bellefair&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
/* @import url('../font/bellefair/Bellefair-Regular.ttf'); */
body {
    /* background-color: #0b0d17; */
    margin: 0;
    background-image: url("../home/background-home-desktop.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-color: #000000 !important;
    /* background-color: #0b0d17;
    transition: all 0.5s ease-in-out; */
}
* {
    color: white;
}
p {
    /* margin-bottom: 0; */
    width: fit-content;
}
p, .h1, .h2, .h3, .h4 {
    font-family: 'Bellefair','Roboto', serif !important;
    /* font-family: 'Roboto', sans-serif; */
    /* margin-top: 0; */
    /* margin-bottom: 0; */
}
.h5 {
    font-family: 'Barlow Condensed', sans-serif !important;
    margin-bottom: 0;
    font-weight: 300 !important;
    font-size: 28px !important;
    color: #d0d6f9 !important;
    letter-spacing: 4.75px;
}

.h1 {
    font-size: 150px !important;
}
.h2 {
    font-size: 100px !important;
}
.h3 {
    font-size: 56px !important;
}
.h4 {
    font-size: 32px !important;
}

.text-justify {
    text-align: justify;
}

.gap-20 {
    gap: 20px;
}

.ls-2{
    letter-spacing: 4.75px;
}

.lh-2 {
    line-height: 2em;
}

.fs-18 {
    font-size: 18px !important;
}

.text-light-dark {
    color: #353740 !important;
}

.text-dark {
    color: #0b0d17;
}
.fw-normal {
    font-weight: normal !important;
}

.bf-regular {
    font-family: 'Bellefair', 'Roboto', sans-serif !important;
}

.roboto-regular {
    font-family: 'Roboto', sans-serif !important;
}
.barlow {
    font-family: 'Barlow', sans-serif !important;
}


.hr-light {
    width: 100%;
    border: 0.5px solid #d0d6f9;

}

nav {
    font-family: 'Barlow Condensed', sans-serif !important;
    font-size: 16px;
    text-transform: uppercase;
    display: flex;
    justify-content: space-between;
    align-items: center;
    /* border: 2px solid red; */
    padding-left: 20px;
    position: relative;
    width: 100%;
    box-sizing: border-box;
}
nav > * {
    flex: 1;
}
nav ul {
    background-color: #15182183;
}
.nav-item {
    backdrop-filter: blur(10px);
    padding: 15px;
}

.nav-link {
    margin-left: 40px;
    /* border: 1px solid green; */
    padding: 35px 0;
}

.nav-link.active {
    border-bottom: 2px solid white !important;
    cursor: pointer;
}

.nav-link:hover {
    border-bottom: 2px solid rgba(255, 255, 255, 0.5);
    cursor: pointer;
}

nav a {
    text-decoration: none;
    color: white !important;
}

#navbarSupportedContent > ul > li > a > span {
    font-weight: bold;
}

nav > hr {
    position: absolute;
    left: 10%;
    top: 45%;
    width: 35%;
    border: 0.5px solid #353740;
    z-index: 100;
}



#explore-button {
    font-size: 24px;
    height: 100px;
    width: 100px;
    border: 0;
    transition: border 0.5s ease-in-out;
    box-sizing: content-box;
    border: 0px solid #24262f;
}

#explore-button:hover {
    border: 40px solid #24262f;
    /* box-shadow: 0 0 100px #24262f; */
    cursor: pointer;
    /* transition: all 0.5s ease-out; */
}

@media all and (min-width: 768px) and (max-width: 991.98px)  {
    body {
        background-image: url('../home/background-home-tablet.jpg');
    }
    .h5 {
        font-size: 24px !important;
    }
}

@media all and (min-width: 100px) and (max-width: 767.98px)  {
    body {
        background-image: url('../home/background-home-mobile.jpg');
    }
    .h1 {
        font-size: 100px !important;
    }
    .h5 {
        font-size: 18px !important;
    }
}

